# Weather_Outfit_Agent

./: .gitignore  README.md  pyproject.toml
app/: main.py  weather_agent.py
tests/: test_weather_agent.py
